Update memoria, y testeos masivos

--- a/doc/1_Introduccion.tex
+++ b/doc/1_Introduccion.tex
@@ -30,8 +30,8 @@ Aplicar métodos actuales de optimización basados en la meta-heurística \emph{
 La estructura del documento tiene la siguiente forma:
 \begin{enumerate}
   \item El \textbf{Capítulo 2} resume el trabajo actual encontrado en la literatura acerca de la meta-heurística \emph{Particle Swarm Optimization} y las técnicas existentes para hallar los parámetros de ajuste de las distribuciones de densidad de probabilidad de Weibull y la \emph{mixture of von Mises distribution}.
-  \item El \textbf{Capítulo 3} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de Weibull a los datos de velocidad el viento.
-  \item El \textbf{Capítulo 4} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de von Mises (\emph{mixture of von Mises distribution}) a los datos de dirección el viento.
-  \item El \textbf{Capítulo 5} expone alguna de las potenciales aplicaciones de los algoritmos propuestos para el ajuste de modelos en datos de velocidad y dirección del viento.
+  \item El \textbf{Capítulo 3} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de Weibull a los datos de velocidad del viento.
+  \item El \textbf{Capítulo 4} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de von Mises (\emph{mixture of von Mises distribution}) a los datos de dirección del viento.
+  \item El \textbf{Capítulo 5} expone algunas de las potenciales aplicaciones de los algoritmos propuestos para el ajuste de modelos en datos de velocidad y dirección del viento.
   \item El \textbf{Capítulo 6} muestra las conclusiones generales obtenidas en esta memoria. 
 \end{enumerate}
