--- a/doc/6_Conclusiones.tex
+++ b/doc/6_Conclusiones.tex
@@ -3,6 +3,6 @@
 En esta memoria se implementaron dos algoritmos para el ajuste de parámetros de distribuciones de densidad de probabilidad a datos de velocidad y dirección del viento.\\
 La distribución de Weibull, es una función utilizada ampliamente para el ajuste de datos de velocidad promedio del viento. Esto se debe principalmente, a que la mayoría de los estudios que utilizan esta distribución, están relacionadas con la evaluación del potencial eléctrico de cierta región. La diferencia entre esos estudios radica esencialmente en el método utilizado para encontrar los parámetros $k$ y $c$ de la distribución de Weibull.\\
 Los resultados obtenidos en esta memoria, confirman que el \emph{Particle Swarm Optimization}, permite encontrar los parámetros de ajuste para la función de Weibull, con un nivel de representación de los datos reales aceptable. Sin embargo, si se desea realizar otras representaciones de la velocidad del viento, que no sean los promedios diarios de las mediciones como base de los datos, se debe modificar la función de Weibull o buscar otra distribución.\\
-La función \emph{mixture of von Mises distribution} es ampliamente utilizada para representar los datos de dirección del viento. A diferencia de la distribución de Weibull, el ajuste de los parámetros de von Mises es un proceso más difícil, que requiere de un cálculo numérico complejo o una estimación inicial débil de la solución buscada para luego ser mejorada con alguna técnica. En esta memoria, se trabaja desde lo realizado por Heckenbergerova et al. \cite{Heckenbergerova15}, en donde no se consiguen los resultados esperados debido a que no se trató el problema de la convergencia prematura del \emph{Particle Swarm Optimization}. Cuando no es suficiente con fijar los parámetros del PSO, se pueden aplicar estrategias como la propuesta aquí \ref{eq:VariationParameters_new} para controlar los parámetros del algoritmo durante su ejecución.\\
-Más allá de la distribución a utilizar y del contexto en el que se esté trabajando, la meta-heurística \emph{Particle Swarm Optimization} es una buena herramienta para encontrar o ajustar parámetros, dado que posee buenos tiempos de ejecución y se adapta fácilmente cambiando la función objetivo. Cuando el espacio de búsqueda es muy amplio, como en el caso del ajuste de la distribución de von Mises, es conveniente guiar la búsqueda a través de soluciones iniciales.\\
+La función \emph{mixture of von Mises distribution} es ampliamente utilizada para representar los datos de dirección del viento. A diferencia de la distribución de Weibull, el ajuste de los parámetros de von Mises es un proceso más difícil, que requiere de un cálculo numérico complejo o una estimación inicial débil de la solución buscada para luego ser mejorada con alguna técnica. En esta memoria, se trabaja desde lo realizado por Heckenbergerova et al. \cite{Heckenbergerova15}, en donde no se consiguen los resultados esperados debido a que no se trató el problema de la convergencia prematura del \emph{Particle Swarm Optimization}. Cuando no es suficiente con fijar los parámetros del PSO, se pueden aplicar estrategias como la propuesta en esta memoria en las ecuaciones \ref{eq:VariationParameters_new}, \ref{eq:VariationParameters_new_2} y \ref{eq:VariationParameters_new_3} para controlar los parámetros del algoritmo durante su ejecución.\\
+Más allá de la distribución a utilizar y del contexto en el que se esté trabajando, la meta-heurística \emph{Particle Swarm Optimization} es una buena herramienta para ajustar parámetros, dado que posee buenos tiempos de ejecución y se adapta fácilmente cambiando la función objetivo. Cuando el espacio de búsqueda es muy amplio, como en el caso del ajuste de la distribución de von Mises, es conveniente guiar la búsqueda a través de soluciones iniciales.\\
 Como trabajo futuro queda mejorar la forma de las curvas obtenidas para la dirección del viento, es decir, la similitud con el histograma de datos. Esto podría realizarse mejorando la función objetivo para que tenga en cuenta dicho aspecto. También queda pendiente evaluar otras estrategias para el control de parámetros del PSO, que permitan controlar aspectos como la convergencia prematura.\\
