--- a/doc/code/pso_code.tex
+++ b/doc/code/pso_code.tex
@@ -3,11 +3,11 @@
 \caption{PSO para el ajuste de los parámetros de la distribución de Weibull}
 \label{alg:pso}
 \begin{algorithmic}
-\REQUIRE Datos de frecuencias de velocidades del viento.
-\ENSURE Valores para los parámetros $k$ y $c$.
+\REQUIRE Datos de frecuencias de velocidades del viento
+\ENSURE Valores para los parámetros $k$ y $c$
 \STATE enjambre = inicializar(w,c1,c2)
 \FOR{$i = 1$ to $Iter_{max}$}
-\FOR{Each partículas en enjambre}
+\FOR{\textbf{Each} partícula en enjambre}
     \STATE actualizarVelocidadPartícula(partícula)
     \STATE actualizarPosiciónPartícula(partítcula)
     \STATE revisarLímitesPosición(partícula)
@@ -16,6 +16,6 @@
 \STATE guardarMejorResultadoGlobal(enjambre)
 \STATE actualizarParámetros(enjambre)
 \ENDFOR
-\STATE retornarMejorResultadoGlobal(enjambre).
+\STATE retornarMejorResultadoGlobal(enjambre)
 \end{algorithmic}
 \end{algorithm}
